# lunascope

./: LICENSE  launch.py  pyproject.toml  pysidedeploy.spec  requirements-build.txt
.github/workflows/: build-macos-app.yml  build-macos-intel-app.yml  build-pyinstaller.yml  build-windows-app.yml  smoke-test-pyinstaller.yml
scripts/: patch_nuitka_package_config.py
src/lunascope/: __init__.py  __main__.py  app.py  controller.py  file_dialogs.py  helpers.py  runtime_paths.py  session_state.py  updater.py
src/lunascope/components/: actigraphy.py  anal.py  annot_explorer.py  annot_explorer_funcs.py  cmaps.py  ctree.py  explorer_annot.py  explorer_base.py  explorer_dock.py  explorer_hypnoscope.py  explorer_plotter.py  explorer_waveform.py  hypno.py  metrics.py  moonbeam_dock.py  mplcanvas.py  plts.py  psd_overlay.py  results_io.py  settings.py  signals.py  slist.py  soappops.py  spectrogram.py  tbl_funcs.py  tutorial.py
src/lunascope/ui/: main.ui
