[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunascope"
version = "0.2.7"
description = "Sleep-EEG viewer and interface to Luna"
readme = "README.md"
requires-python = ">=3.9, <3.15"
license = {file = "LICENSE"}
authors = [
  {name = "Lorcan Purcell", email = "lpurcell26@nmhschool.org"  },
  {name = "Shaun Purcell", email = "shaun.purcell@nyspi.columbia.edu"},
  {name = "Nataliia Kozhemiako", email = "nkozhemiako@bwh.harvard.edu"} ]

dependencies = [
 "lunapi>=1.4.4",
 "PySide6>=6.10.0",  
 "pyqtgraph==0.13.7",
 "numpy",
 "pandas",
 "matplotlib"
]

[project.scripts]
lunascope = "lunascope.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lunascope = ["ui/*.ui"]
