[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunascope"
version = "1.5.0a1"
description = "Sleep-EEG viewer and interface to Luna"
readme = "README.md"
requires-python = ">=3.9, <3.15"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
authors = [
  {name = "Lorcan Purcell", email = "lpurcell26@nmhschool.org"  },
  {name = "Shaun Purcell", email = "shaun.purcell@nyspi.columbia.edu"},
  {name = "Nataliia Kozhemiako", email = "nkozhemiako@bwh.harvard.edu"} ]

dependencies = [
  "lunapi>=1.4.9,<1.5",
  "PySide6>=6.10,<6.11",
  "pyqtgraph>=0.13.7,<0.14",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "psutil>=5.9"
]

[project.scripts]
lunascope = "lunascope.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lunascope = ["ui/*.ui"]
